--- a/租赁网站/productinfo.html
+++ b/租赁网站/productinfo.html
@@ -138,30 +138,30 @@
                     <div class="mdui-col-xs-8 ">
                         <!-- 页面内容 -->
                         <div class="mdui-container-fluid mdui-m-t-5 mdui-float-left">
-                            <h2 class="mdui-text-color-teal">产品信息</h2>
-                            <div class="tree well mdui-text-color-teal">
+                            <h2 class="mdui-text-color-teal">产品信息<small class="mdui-typo-body-1-opacity">（删除产品信息请联系平台）</small></h2>
+                            <div class="tree well mdui-text-color-teal" style="width: 100%">
                                 <ul class="mdui-list">
                                     <li>
-                                        <span><i class="icon-folder-open"></i>平台</span>
+                                        <span><i class="mdui-icon material-icons">description</i>平台</span>
                                         <ul>
                                             <li>
-                                                <span><i class="icon-minus-sign"></i>类型一</span>
+                                                <span><i class="mdui-icon material-icons">extension</i>类型一</span><a class="mdui-btn mdui-btn-dense mdui-m-a-1" href="tolease.html">新增</a>
                                                 <ul>
                                                     <li>
-                                                        <span><i class="icon-leaf"></i>产品一</span>
+                                                        <span><i class="icon-leaf"></i>产品一</span> <a class="mdui-btn mdui-btn-dense mdui-m-a-1" href="changeproductinfo.html">修改</a>
                                                     </li>
                                                 </ul>
                                             </li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <span><i class="icon-folder-open"></i>自储</span>
+                                        <span><i class="mdui-icon material-icons">description</i>自储</span>
                                         <ul>
                                             <li>
-                                                <span><i class="icon-leaf"></i>类型一</span>
+                                                <span><i class="mdui-icon material-icons">extension</i>类型一</span> <a class="mdui-btn mdui-btn-dense mdui-m-a-1" href="tolease.html">新增</a>
                                                 <ul>
                                                     <li>
-                                                        <span><i class="icon-leaf"></i>产品一</span>
+                                                        <span><i class="icon-leaf"></i>产品一</span> <a class="mdui-btn mdui-btn-dense  mdui-m-a-1" href="changeproductinfo.html">修改</a>
                                                     </li>
                                                 </ul>
                                             </li>
