--- a/租赁网站/collection.html
+++ b/租赁网站/collection.html
@@ -138,6 +138,96 @@
                         <!-- 页面内容 -->
                         <div class="mdui-container-fluid mdui-m-t-5 mdui-float-left">
                             <h2 class="mdui-text-color-teal">收藏夹</h2>
+                            <h4>出租信息</h4>
+                            <div class="mdui-table-fluid">
+                                <table class="mdui-table mdui-table-hoverable">
+                                    <thead>
+                                        <tr>
+                                            <th>序号</th>
+                                            <th>商品</th>
+                                            <th>数量</th>
+                                            <th>状态</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>M</td>
+                                            <td>2</td>
+                                            <td>已发布</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>J</td>
+                                            <td>T3</td>
+                                            <td>在审核</td>
+                                        </tr>
+
+                                    </tbody>
+                                </table>
+                            </div>
+
+                            <div class="mdui-divider mdui-m-y-5 "></div>
+
+                            <h4>求租信息</h4>
+                            <div class="mdui-table-fluid">
+                                <table class="mdui-table mdui-table-hoverable">
+                                    <thead>
+                                        <tr>
+                                            <th>序号</th>
+                                            <th>商品</th>
+                                            <th>数量</th>
+                                            <th>状态</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>M</td>
+                                            <td>2</td>
+                                            <td>已发布</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>J</td>
+                                            <td>T3</td>
+                                            <td>在审核</td>
+                                        </tr>
+
+                                    </tbody>
+                                </table>
+                            </div>
+
+                            <div class="mdui-divider mdui-m-y-5 "></div>
+
+                            <h4>商家信息</h4>
+                            <div class="mdui-table-fluid">
+                                <table class="mdui-table mdui-table-hoverable">
+                                    <thead>
+                                        <tr>
+                                            <th>序号</th>
+                                            <th>商家名称</th>
+                                            <th>地址</th>
+                                            <th>联系电话</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>1</td>
+                                            <td>M</td>
+                                            <td>江苏</td>
+                                            <td>18252082058</td>
+                                        </tr>
+                                        <tr>
+                                            <td>2</td>
+                                            <td>J</td>
+                                            <td>南京</td>
+                                            <td>18252082058</td>
+                                        </tr>
+
+                                    </tbody>
+                                </table>
+                            </div>
                         </div>
                     </div>
                 </div>
