--- a/租赁网站/tolease.html
+++ b/租赁网站/tolease.html
@@ -70,7 +70,7 @@
                         <label class="mdui-textfield-label">信息类别</label>
                         <input class="mdui-textfield-input" type="text" name="info_category" value="出租">
                     </div>
-                    <div class="mdui-m-b-0">
+                    <div class="mdui-m-b-0 mdui-row">
                         <div class="mdui-col-xs-6">
                             <p>选择出租类型：</p>
                             <select name="how_to_lease" class="mdui-select">
