--- a/租赁网站/allorder.html
+++ b/租赁网站/allorder.html
@@ -136,8 +136,68 @@
 
                     <div class="mdui-col-xs-8 ">
                         <!-- 页面内容 -->
-                        <div class="mdui-container-fluid mdui-m-t-5 mdui-float-left">
+                        <div class="mdui-container-fluid mdui-m-t-5">
                             <h2 class="mdui-text-color-teal">全部订单</h2>
+                            <div class="mdui-panel" mdui-panel>
+
+                                <div class="mdui-panel-item">
+                                    <div class="mdui-panel-item-header">
+                                        <div class="mdui-panel-item-title">订单编号</div>
+                                        <div class="mdui-panel-item-summary">发布时间: 181001</div>
+                                        <div class="mdui-panel-item-summary">完成时间: 181015</div>
+                                        <i class="mdui-panel-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
+                                    </div>
+                                    <div class="mdui-panel-item-body">
+                                        <p>供货方信息:</p>
+                                        <p>求租方信息:</p>
+                                        <p>交易物品类别:</p>
+                                        <p>交易数量:</p>
+                                        <p>产品详情:</p>
+                                        <div class="mdui-panel-item-actions">
+                                            <button class="mdui-btn mdui-ripple" mdui-panel-item-close>返回</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="mdui-panel-item">
+                                    <div class="mdui-panel-item-header">
+                                        <div class="mdui-panel-item-title">订单编号</div>
+                                        <div class="mdui-panel-item-summary">发布时间: 181001</div>
+                                        <div class="mdui-panel-item-summary">完成时间: 181015</div>
+                                        <i class="mdui-panel-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
+                                    </div>
+                                    <div class="mdui-panel-item-body">
+                                        <p>供货方信息:</p>
+                                        <p>求租方信息:</p>
+                                        <p>交易物品类别:</p>
+                                        <p>交易数量:</p>
+                                        <p>产品详情:</p>
+                                        <div class="mdui-panel-item-actions">
+                                            <button class="mdui-btn mdui-ripple" mdui-panel-item-close>返回</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="mdui-panel-item">
+                                    <div class="mdui-panel-item-header">
+                                        <div class="mdui-panel-item-title">订单编号</div>
+                                        <div class="mdui-panel-item-summary">发布时间: 181001</div>
+                                        <div class="mdui-panel-item-summary">完成时间: 181015</div>
+                                        <i class="mdui-panel-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
+                                    </div>
+                                    <div class="mdui-panel-item-body">
+                                        <p>供货方信息:</p>
+                                        <p>求租方信息:</p>
+                                        <p>交易物品类别:</p>
+                                        <p>交易数量:</p>
+                                        <p>产品详情:</p>
+                                        <div class="mdui-panel-item-actions">
+                                            <button class="mdui-btn mdui-ripple" mdui-panel-item-close>返回</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
