--- a/租赁网站/changeproductinfo.html
+++ b/租赁网站/changeproductinfo.html
@@ -39,7 +39,7 @@
           <div class="mdui-col-xs-4 mdui-p-t-5">
             <!-- 左侧导航栏 -->
             <div class="mdui-color-white mdui-shadow-0 mdui-float-left">
-              <div class="mdui-list mdui-shadow-0" mdui-collapse="{accordion: true}">
+              <div class="mdui-list mdui-shadow-0" >
                 <div class="mdui-p-b-1">
                   <div class="mdui-list-item mdui-ripple">
                     <i class="mdui-list-item-icon mdui-icon material-icons">account_circle</i>
