--- a/租赁网站/sendmail.html
+++ b/租赁网站/sendmail.html
@@ -8,7 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="http://cdnjs.loli.net/ajax/libs/mdui/0.4.1/css/mdui.min.css">
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/box.css">
     <title>个人中心</title>
 </head>
 
@@ -135,31 +134,29 @@
                         </div>
                     </div>
 
-                    <div class="mdui-col-xs-8 ">
+                    <div class="mdui-col-xs-8">
                         <!-- 页面内容 -->
-                        <div class="mdui-container-fluid mdui-m-t-5 mdui-float-left">
-                            <h2 class="mdui-text-color-teal">发件箱</h2>
+                        <div class="mdui-container-fluid mdui-m-t-5">
+                            <h2 class="mdui-text-color-teal">发送邮件</h2>
                         </div>
-                        <div class="mdui-m-t-5">
-                            <table class="mdui-table mdui-table-hoverable mdui-shadow-0 mdui-table-selectable">
-                                <tr>
-                                    <th class="mdui-text-left"><a href="mail.html">邮件标题</a></th>
-                                    <td class="mdui-text-left">to 收件人</td>
-                                    <td class="mdui-text-right">邮件内容简介</td>
-                                </tr>
-                                <tr>
-                                    <th class="mdui-text-left"><a href="mail.html">邮件标题</a></th>
-                                    <td class="mdui-text-left">to 收件人</td>
-                                    <td class="mdui-text-right">邮件内容简介</td>
-                                </tr>
-                                <tr>
-                                    <th class="mdui-text-left"><a href="mail.html">邮件标题</a></th>
-                                    <td class="mdui-text-left">to 收件人</td>
-                                    <td class="mdui-text-right">邮件内容简介</td>
-                                </tr>
-                            </table>
-                            <button class="mdui-m-t-2 mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-red mdui-ripple">移至回收箱</button>
-                            <button class="mdui-m-t-2 mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-teal mdui-ripple mdui-float-right" onclick="{window.open('sendmail.html')}">发送邮件</button>
+                        <div class="mdui-container-fluid">
+                            <div class="mdui-textfield mdui-textfield-floating-label">
+                                <label class="mdui-textfield-label">邮件标题</label>
+                                <input class="mdui-textfield-input" type="text">
+                            </div>
+                            <div class="mdui-textfield mdui-textfield-floating-label">
+                                <label class="mdui-textfield-label">发件人</label>
+                                <input class="mdui-textfield-input" disabled type="text" value="金敏睿">
+                            </div>
+                            <div class="mdui-textfield mdui-textfield-floating-label">
+                                <label class="mdui-textfield-label">收件人</label>
+                                <input class="mdui-textfield-input" type="text">
+                            </div>
+                            <div class="mdui-textfield mdui-textfield-floating-label">
+                                <label class="mdui-textfield-label">邮件内容</label>
+                                <textarea class="mdui-textfield-input" type="text"></textarea>
+                            </div>
+                            <button class="mdui-m-t-2 mdui-float-right mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-teal mdui-ripple">发送邮件</button>
                         </div>
                     </div>
                 </div>
