--- a/租赁网站/inbox.html
+++ b/租赁网站/inbox.html
@@ -8,6 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="http://cdnjs.loli.net/ajax/libs/mdui/0.4.1/css/mdui.min.css">
     <link rel="stylesheet" href="css/common.css">
+    <link rel="stylesheet" href="css/box.css">
     <title>个人中心</title>
 </head>
 
@@ -23,7 +24,7 @@
                         <div class="mdui-toolbar-spacer"></div>
                         <div id="user-status">
                             <a href="personalcenter.html" class="mdui-btn">个人中心</a>
-                            <a href="message.html" class="mdui-btn">消息</a>
+                            <a href="inbox.html" class="mdui-btn">消息</a>
                             <a href="index.html" onclick="Exit()" class="mdui-btn">退出</a>
                         </div>
                     </div>
@@ -138,6 +139,26 @@
                         <!-- 页面内容 -->
                         <div class="mdui-container-fluid mdui-m-t-5 mdui-float-left">
                             <h2 class="mdui-text-color-teal">收件箱</h2>
+                        </div>
+                        <div class="mdui-m-t-5">
+                            <table class="mdui-table mdui-table-hoverable mdui-shadow-0 mdui-table-selectable">
+                                <tr>
+                                    <th class="mdui-text-left"><a href="mail.html">邮件标题</a></th>
+                                    <td class="mdui-text-left">from 发件人</td>
+                                    <td class="mdui-text-right">邮件内容简介</td>
+                                </tr>
+                                <tr>
+                                    <th class="mdui-text-left"><a href="mail.html">邮件标题</a></th>
+                                    <td class="mdui-text-left">from 发件人</td>
+                                    <td class="mdui-text-right">邮件内容简介</td>
+                                </tr>
+                                <tr>
+                                    <th class="mdui-text-left"><a href="mail.html">邮件标题</a></th>
+                                    <td class="mdui-text-left">from 发件人</td>
+                                    <td class="mdui-text-right">邮件内容简介</td>
+                                </tr>
+                            </table>
+                            <button class="mdui-m-t-2 mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-red mdui-ripple">移至回收箱</button>
                         </div>
                     </div>
                 </div>
