--- a/租赁网站/ratingorder.html
+++ b/租赁网站/ratingorder.html
@@ -8,7 +8,6 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="http://cdnjs.loli.net/ajax/libs/mdui/0.4.1/css/mdui.min.css">
     <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/box.css">
     <title>个人中心</title>
 </head>
 
@@ -24,7 +23,7 @@
                         <div class="mdui-toolbar-spacer"></div>
                         <div id="user-status">
                             <a href="personalcenter.html" class="mdui-btn">个人中心</a>
-                            <a href="inbox.html" class="mdui-btn">消息</a>
+                            <a href="message.html" class="mdui-btn">消息</a>
                             <a href="index.html" onclick="Exit()" class="mdui-btn">退出</a>
                         </div>
                     </div>
@@ -137,29 +136,71 @@
 
                     <div class="mdui-col-xs-8 ">
                         <!-- 页面内容 -->
-                        <div class="mdui-container-fluid mdui-m-t-5 mdui-float-left">
-                            <h2 class="mdui-text-color-teal">发件箱</h2>
-                        </div>
-                        <div class="mdui-m-t-5">
-                            <table class="mdui-table mdui-table-hoverable mdui-shadow-0 mdui-table-selectable">
-                                <tr>
-                                    <th class="mdui-text-left"><a href="mail.html">邮件标题</a></th>
-                                    <td class="mdui-text-left">to 收件人</td>
-                                    <td class="mdui-text-right">邮件内容简介</td>
-                                </tr>
-                                <tr>
-                                    <th class="mdui-text-left"><a href="mail.html">邮件标题</a></th>
-                                    <td class="mdui-text-left">to 收件人</td>
-                                    <td class="mdui-text-right">邮件内容简介</td>
-                                </tr>
-                                <tr>
-                                    <th class="mdui-text-left"><a href="mail.html">邮件标题</a></th>
-                                    <td class="mdui-text-left">to 收件人</td>
-                                    <td class="mdui-text-right">邮件内容简介</td>
-                                </tr>
-                            </table>
-                            <button class="mdui-m-t-2 mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-red mdui-ripple">移至回收箱</button>
-                            <button class="mdui-m-t-2 mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-teal mdui-ripple mdui-float-right" onclick="{window.open('sendmail.html')}">发送邮件</button>
+                        <div class="mdui-container-fluid mdui-m-t-5">
+                            <h2 class="mdui-text-color-teal">待评价订单</h2>
+                            <div class="mdui-panel" mdui-panel>
+
+                                <div class="mdui-panel-item">
+                                    <div class="mdui-panel-item-header">
+                                        <div class="mdui-panel-item-title">订单编号</div>
+                                        <div class="mdui-panel-item-summary">发布时间: 181001</div>
+                                        <div class="mdui-panel-item-summary">完成时间: 181015</div>
+                                        <i class="mdui-panel-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
+                                    </div>
+                                    <div class="mdui-panel-item-body">
+                                        <p>供货方信息:</p>
+                                        <p>求租方信息:</p>
+                                        <p>交易物品类别:</p>
+                                        <p>交易数量:</p>
+                                        <p>产品详情:</p>
+                                        <div class="mdui-panel-item-actions">
+                                            <button class="mdui-btn mdui-ripple" mdui-panel-item-close>返回</button>
+                                            <button class="mdui-btn mdui-ripple">评价</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="mdui-panel-item">
+                                    <div class="mdui-panel-item-header">
+                                        <div class="mdui-panel-item-title">订单编号</div>
+                                        <div class="mdui-panel-item-summary">发布时间: 181001</div>
+                                        <div class="mdui-panel-item-summary">完成时间: 181015</div>
+                                        <i class="mdui-panel-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
+                                    </div>
+                                    <div class="mdui-panel-item-body">
+                                        <p>供货方信息:</p>
+                                        <p>求租方信息:</p>
+                                        <p>交易物品类别:</p>
+                                        <p>交易数量:</p>
+                                        <p>产品详情:</p>
+                                        <div class="mdui-panel-item-actions">
+                                            <button class="mdui-btn mdui-ripple" mdui-panel-item-close>返回</button>
+                                            <button class="mdui-btn mdui-ripple">评价</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="mdui-panel-item">
+                                    <div class="mdui-panel-item-header">
+                                        <div class="mdui-panel-item-title">订单编号</div>
+                                        <div class="mdui-panel-item-summary">发布时间: 181001</div>
+                                        <div class="mdui-panel-item-summary">完成时间: 181015</div>
+                                        <i class="mdui-panel-item-arrow mdui-icon material-icons">keyboard_arrow_down</i>
+                                    </div>
+                                    <div class="mdui-panel-item-body">
+                                        <p>供货方信息:</p>
+                                        <p>求租方信息:</p>
+                                        <p>交易物品类别:</p>
+                                        <p>交易数量:</p>
+                                        <p>产品详情:</p>
+                                        <div class="mdui-panel-item-actions">
+                                            <button class="mdui-btn mdui-ripple" mdui-panel-item-close>返回</button>
+                                            <button class="mdui-btn mdui-ripple">评价</button>
+                                        </div>
+                                    </div>
+                                </div>
+
+                            </div>
                         </div>
                     </div>
                 </div>
