--- a/租赁网站/personalcenter.html
+++ b/租赁网站/personalcenter.html
@@ -46,7 +46,7 @@
                   <div class="mdui-list-item mdui-ripple">
                     <i class="mdui-list-item-icon mdui-icon material-icons">account_circle</i>
                     <div class="mdui-list-item-content">
-                      <a href="personalcenter.html" class="mdui-typo-body-1 mdui-text-color-teal">基本信息</a>
+                      <a href="personalcenter.html" class="mdui-typo-body-2 mdui-text-color-teal">基本信息</a>
                     </div>
                   </div>
                 </div>
@@ -57,7 +57,7 @@
                   <div class="mdui-list-item mdui-ripple">
                     <i class="mdui-list-item-icon mdui-icon material-icons">build</i>
                     <div class="mdui-list-item-content">
-                      <a href="productinfo.html" class="mdui-typo-body-1 mdui-text-color-teal">产品信息</a>
+                      <a href="productinfo.html" class="mdui-typo-body-2 mdui-text-color-teal">产品信息</a>
                     </div>
                   </div>
                 </div>
@@ -68,7 +68,7 @@
                   <div class="mdui-list-item mdui-ripple">
                     <i class="mdui-list-item-icon mdui-icon material-icons">call</i>
                     <div class="mdui-list-item-content">
-                      <a class="mdui-typo-body-1 mdui-text-color-teal">消息</a>
+                      <a class="mdui-typo-body-2 mdui-text-color-teal">消息</a>
                     </div>
 
                   </div>
@@ -85,7 +85,7 @@
                   <div class="mdui-list-item mdui-ripple">
                     <i class="mdui-list-item-icon mdui-icon material-icons">device_hub</i>
                     <div class="mdui-list-item-content">
-                      <a class="mdui-typo-body-1 mdui-text-color-teal">供求</a>
+                      <a class="mdui-typo-body-2 mdui-text-color-teal">供求</a>
                     </div>
 
                   </div>
@@ -101,7 +101,7 @@
                   <div class="mdui-list-item mdui-ripple">
                     <i class="mdui-list-item-icon mdui-icon material-icons">content_paste</i>
                     <div class="mdui-list-item-content">
-                      <a class="mdui-typo-body-1 mdui-text-color-teal">订单</a>
+                      <a class="mdui-typo-body-2 mdui-text-color-teal">订单</a>
                     </div>
 
                   </div>
@@ -135,11 +135,11 @@
                   <h2 class="mdui-text-color-teal">用户基本信息</h2>
                   <img src="images/1.jpg" class="mdui-float-left mdui-img-circle" height="250" width="250">
                   <ul class="mdui-list mdui-float-left">
-                    <li class="mdui-list-item mdui-typo-title">用户名：测试用户</li>
-                    <li class="mdui-list-item mdui-typo-title">用户等级：VIP</li>
-                    <li class="mdui-list-item mdui-typo-title">真实姓名：金敏睿</li>
-                    <li class="mdui-list-item mdui-typo-title">公司地址：南京信息工程大学</li>
-                    <li class="mdui-list-item mdui-typo-title">联系电话：1838271889</li>
+                    <li class="mdui-list-item mdui-typo-body-1 mdui-text-color-teal">用户名：测试用户</li>
+                    <li class="mdui-list-item mdui-typo-body-1 mdui-text-color-teal">用户等级：VIP</li>
+                    <li class="mdui-list-item mdui-typo-body-1 mdui-text-color-teal">真实姓名：金敏睿</li>
+                    <li class="mdui-list-item mdui-typo-body-1 mdui-text-color-teal">公司地址：南京信息工程大学</li>
+                    <li class="mdui-list-item mdui-typo-body-1 mdui-text-color-teal">联系电话：1838271889</li>
                   </ul>
                 </div>
                 <button class="mdui-btn mdui-color-teal mdui-float-right">修改资料</button>
@@ -149,14 +149,14 @@
                 <div class="com-info">
                   <h2 class="mdui-text-color-teal">企业信息<small class="mdui-typo-body-1-opacity">（企业信息修改请联系管理员）</small></h2>
                   <ul class="mdui-list mdui-float-left">
-                    <li class="mdui-list-item mdui-typo-title">公司名称：测试用户</li>
-                    <li class="mdui-list-item mdui-typo-title">公司等级：VIP</li>
-                    <li class="mdui-list-item mdui-typo-title">公司网址：</li>
-                    <li class="mdui-list-item mdui-typo-title">公司经营性质：</li>
-                    <li class="mdui-list-item mdui-typo-title">主营行业：</li>
-                    <li class="mdui-list-item mdui-typo-title">公司图片：</li>
-                    <li class="mdui-list-item mdui-typo-title">公司logo：</li>
-                    <li class="mdui-list-item mdui-typo-title">公司简介：</li>
+                    <li class="mdui-list-item mdui-typo-body-1 mdui-text-color-teal">公司名称：测试用户</li>
+                    <li class="mdui-list-item mdui-typo-body-1 mdui-text-color-teal">公司等级：VIP</li>
+                    <li class="mdui-list-item mdui-typo-body-1 mdui-text-color-teal">公司网址：</li>
+                    <li class="mdui-list-item mdui-typo-body-1 mdui-text-color-teal">公司经营性质：</li>
+                    <li class="mdui-list-item mdui-typo-body-1 mdui-text-color-teal">主营行业：</li>
+                    <li class="mdui-list-item mdui-typo-body-1 mdui-text-color-teal">公司图片：</li>
+                    <li class="mdui-list-item mdui-typo-body-1 mdui-text-color-teal">公司logo：</li>
+                    <li class="mdui-list-item mdui-typo-body-1 mdui-text-color-teal">公司简介：</li>
                   </ul>
                 </div>
               </div>
