--- a/租赁网站/recoverybox.html
+++ b/租赁网站/recoverybox.html
@@ -158,7 +158,7 @@
                                     <td class="mdui-text-right">邮件内容简介</td>
                                 </tr>
                             </table>
-                            <button class="mdui-m-t-2 mdui-float-left mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-green mdui-ripple">恢复邮件</button>
+                            <button class="mdui-m-t-2 mdui-float-left mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-teal mdui-ripple">恢复邮件</button>
                             <button class="mdui-m-t-2 mdui-float-right mdui-btn mdui-btn-raised mdui-btn-dense mdui-color-red mdui-ripple">永久删除邮件</button>
                         </div>
                     </div>
